End Compose modal Begin Compose Message Fix send/more buttons align in modal compose

--- a/less/covide/covide.less
+++ b/less/covide/covide.less
@@ -147,10 +147,12 @@ button.change_modal_button{
   margin-bottom : 5px;
   li{
 	border     : 1px solid #DDDDDD;
+	margin-bottom : 5px;
   }
 
   li:nth-child(odd), .odd,  {
 	border     : 1px solid #DDDDDD;
+	margin-bottom : 5px;
   }
 
   .close{
