--- a/less/covide/forms.less
+++ b/less/covide/forms.less
@@ -79,8 +79,10 @@ legend {
 	
 	fieldset {
 		border-bottom  : 0;
-		margin-bottom  : 10px;
-		padding-bottom : 10px;
-		min-height: 130px;
+		margin-bottom  : 0px;
+		padding-bottom : 0px;
+	}
+	fieldset.attachment{
+		min-height: 140px;
 	}
 }
